# shelltree

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  persistence.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs
src/components/Sidebar/: GroupItem.tsx  SessionItem.tsx  Sidebar.tsx
src/components/Terminal/: SplitTerminalView.tsx  TerminalPane.tsx  useTerminal.ts
src/lib/: tauri.ts
src/stores/: sessionStore.ts
src/styles/: global.css
